--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>New Article</h1>
+<h1>Edit existed one</h1>
 <% if @article.errors.any? %>
   <ul>
     <% @article.errors.full_messages.each do |msg|%>
