--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,9 @@
 <h1>Showing selected article</h1>
 <p>
-  Title: <%=@article.title%>
+  Title: <%= @article.title %>
 </p>
 <p>
-  Description: <%=@article.description%>
+  Description: <%= @article.description %>
 </p>
+<%= link_to 'Edit', edit_article_path(@article) %>
+<%= link_to 'Back to Articles Listing', articles_path %>
