Footer & more home style

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
       by <a href="htps://www.google.com">Mashrur</a></small>
     <nav>
       <ul>
-        <li></li>
+        <li><%= link_to "About", about_path %></li>
       </ul>
     </nav>
   </footer>
