--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -5,17 +5,33 @@
     <%end%>
   </ul>
 <%end%>
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title, "Title" %><br/>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description, "Description" %><br/>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit=%>
-  </p>
-<% end %>
-<%= link_to 'Back to Articles Listing', articles_path %>
+<div class="row">
+  <div class="col-xs-12">
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :title, "Title" %>
+        </div>
+        <div class="col-sm-10">
+          <%= f.text_field :title, class: "control-label", placeholder: "Title"%>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :description, "Description" %>
+        </div>
+        <div class="col-sm-10">
+          <%= f.text_area :description, class: "control-label", placeholder: "Description"%>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="cols-sm-offset-2 col-sm-10">
+          <%= f.submit=%>
+        </div>
+      </div>
+    <% end %>
+    <div class="col-xs-4 cols-xs-offset-4">
+      <%= link_to 'Back to Articles Listing', articles_path %>
+    </div>
+  </div>
+</div>
